Fix Firefox on OSX performance

--- a/src/components/mainmenu/index.ejs
+++ b/src/components/mainmenu/index.ejs
@@ -1,7 +1,7 @@
 <section class="mainmenu">
   <div class="isolate" role="presentation">
     <div class="room" role="presentation"></div>
-    <div class="glow play" role="presentation"></div>
+    <div class="glow" role="presentation"></div>
     <div class="paper" role="presentation"></div>
     <div class="dust" role="presentation"></div>
     <div class="color" role="presentation"></div>
