--- a/src/components/website/index.ejs
+++ b/src/components/website/index.ejs
@@ -40,7 +40,7 @@ SVG        | 45kB (18%)
 WOFF       | 18kB (7%)
 PNG        | 34kB (14%)
 CSS        | 7kB (3%)
-HTML + JS  | 12kB (4%)
+HTML  | 12kB (4%)
 
 For comparison, the [Google homepage](https://jialiang.github.io/images/google-speed.jpg) trasfers a total of 458kB on the same device.
 
@@ -61,8 +61,7 @@ This website is compatible with:
 - Safari
 - Internet Explorer 11
 
-It also functions fine with JavaScript disabled.
-The only line of JavaScript used is just to make page switching more efficient.
+It also functions fine with JavaScript disabled. This website does not contain any JavaScript code.
 
 This website supports screens of:
 
