--- a/src/components/work/index.scss
+++ b/src/components/work/index.scss
@@ -1,4 +1,6 @@
 #work {
+  background: url("images/asfalt-light.png") 0 0/150px 150px repeat;
+
   .text-container {
     p {
       box-shadow: 0.25em 0.25em 0 cyan;
