--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -78,12 +78,12 @@ body {
     font-size: 1.35em;
     position: fixed;
     z-index: 2;
-    right: calc(50vw - 50vh / 9 * 16);
+    right: calc(50vw - 50vh / 2 * 3);
     bottom: 1vh;
     transform: rotate3d(0, 0, 1, -3deg);
 
     @media (max-aspect-ratio: 3 / 2) {
-      right: 1vh;
+      right: 2vh;
     }
   }
 }
@@ -243,7 +243,7 @@ a {
         width: 100%;
 
         @media (max-width: 25.5em) {
-          max-height: calc(100vw / 16 * 9 - 2em / 16 * 9);
+          max-height: calc(100vw / 3 * 2 - 2em / 3 * 2);
         }
       }
 
@@ -289,7 +289,7 @@ a {
     &:hover,
     &:focus {
       figure {
-        border-style: dotted;
+        border-style: solid;
         border-color: yellow;
       }
     }
