--- a/src/components/mainmenu/index.scss
+++ b/src/components/mainmenu/index.scss
@@ -6,7 +6,10 @@ section.mainmenu {
   background: black;
 
   .isolate {
+    position: relative;
+    width: calc(100% + 2px);
     height: 100%;
+    margin-left: -2px;
     background: black;
 
     isolation: isolate;
@@ -18,7 +21,6 @@ section.mainmenu {
 
   .room {
     position: absolute;
-    z-index: -1;
     top: 0;
     left: 0;
     width: 100%;
@@ -28,23 +30,16 @@ section.mainmenu {
 
   .glow {
     position: absolute;
-    z-index: -1;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     animation: 0.2s flicker steps(1) infinite;
-    animation-play-state: paused;
     background: inline-svg("glow") 0 0 / auto 100% no-repeat;
-
-    &.play {
-      animation-play-state: running;
-    }
   }
 
   .paper {
     position: absolute;
-    z-index: -1;
     top: 0;
     left: 0;
     width: 100%;
@@ -75,7 +70,6 @@ section.mainmenu {
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: 0.4;
     background: url("images/asfalt-light.png") 0 0/150px 150px repeat;
 
     mix-blend-mode: exclusion;
