--- a/src/components/transition/thanks.scss
+++ b/src/components/transition/thanks.scss
@@ -28,7 +28,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  transform: scale3d(0, 0, 0);
+  transform: scale3d(0, 0, 1);
   pointer-events: none;
   background: radial-gradient(gold, lightyellow 33%, goldenrod) 0 0/100% auto
     no-repeat;
@@ -55,7 +55,7 @@
   }
 
   ~ .mainmenu .thanks-filter {
-    transition: 0.29s transform;
+    transition: 0.29s transform 0.05s;
     transform: scale3d(1, 1, 1);
   }
 }
