--- a/src/components/transition/work.scss
+++ b/src/components/transition/work.scss
@@ -6,7 +6,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  transform: scale3d(0, 0, 0);
+  transform: scale3d(0, 0, 1);
   pointer-events: none;
   background: radial-gradient(#0980ff, #88e7d5, #6161b5);
 
@@ -55,7 +55,7 @@
 
 #work:target {
   ~ .mainmenu .work-filter {
-    transition: 0.29s transform;
+    transition: 0.29s transform 0.05s;
     transform: scale3d(1, 1, 1);
   }
 
