Make website more keyboard friendly

--- a/src/components/website/index.ejs
+++ b/src/components/website/index.ejs
@@ -40,7 +40,8 @@ SVG        | 45kB (18%)
 WOFF       | 18kB (7%)
 PNG        | 34kB (14%)
 CSS        | 7kB (3%)
-HTML  | 12kB (4%)
+HTML       | 12kB (4%)
+JS         | 600 Bytes
 
 For comparison, the [Google homepage](https://jialiang.github.io/images/google-speed.jpg) trasfers a total of 458kB on the same device.
 
@@ -61,7 +62,7 @@ This website is compatible with:
 - Safari
 - Internet Explorer 11
 
-It also functions fine with JavaScript disabled. This website does not contain any JavaScript code.
+It also functions fine with JavaScript disabled. This website only contains a couple of lines of JavaScript code to make it function better for keyboard-only users.
 
 This website supports screens of:
 
