--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -47,7 +47,7 @@ body {
 
     &:focus {
       box-sizing: border-box;
-      border-left-color: rgba(255, 255, 255, 0.5);
+      border-left-color: white;
     }
 
     @media (max-aspect-ratio: 1 / 1) {
@@ -338,8 +338,4 @@ a {
   li {
     text-align: left;
   }
-}
-
-.pause {
-  animation-play-state: paused !important;
 }
