--- a/src/components/work/index.scss
+++ b/src/components/work/index.scss
@@ -2,6 +2,11 @@
   background: url("images/asfalt-light.png") 0 0/150px 150px repeat;
 
   .text-container {
+    a {
+      display: block;
+      border: none;
+    }
+
     p {
       box-shadow: 0.25em 0.25em 0 cyan;
 
