--- a/src/components/about/index.ejs
+++ b/src/components/about/index.ejs
@@ -4,7 +4,7 @@
     <%- md(`
 # <span>About Me</span>
 
-<svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 381.3 381.3" class="avatar">
+<svg focusable="false" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 381.3 381.3" class="avatar">
   <path class="st1" id="polygon6" transform="translate(0 44.5)" fill="#6c6c6c" d="M124 229l-22 8.3v99.5h177.3v-99.5l-22.1-7-5.6-19.1-58.4 58.9-64-58.9z"></path>
   <ellipse class="st1" cx="190" cy="174.5" rx="80.2" ry="97.2" id="ellipse8" fill="#6c6c6c"></ellipse>
   <path class="st2" d="M143 163.9h31.6c4.1 0 7.5 3.4 7.5 7.5v12.5c0 4.1-3.4 7.5-7.5 7.5H143c-4.1 0-7.5-3.4-7.5-7.5v-12.5c0-4.2 3.3-7.5 7.5-7.5z" id="path10" fill="none" stroke="#fff" stroke-width="4" stroke-miterlimit="10"></path>
