--- a/src/components/work/index.ejs
+++ b/src/components/work/index.ejs
@@ -39,6 +39,7 @@
     <a href="#website">
       <figure>
         <svg
+          focusable="false"
           xmlns="http://www.w3.org/2000/svg"
           viewbox="0 0 507 285"
           width="507"
@@ -61,6 +62,7 @@
     <a href="#shit">
       <figure>
         <svg
+          focusable="false"
           xmlns="http://www.w3.org/2000/svg"
           viewbox="0 0 507 285"
           width="507"
@@ -83,6 +85,7 @@
     <a href="#gems">
       <figure>
         <svg
+          focusable="false"
           xmlns="http://www.w3.org/2000/svg"
           viewbox="0 0 507 285"
           width="507"
@@ -105,6 +108,7 @@
     <a href="https://jialiang.github.io/ygo/" target="_blank">
       <figure>
         <svg
+          focusable="false"
           xmlns="http://www.w3.org/2000/svg"
           viewbox="0 0 507 285"
           width="507"
@@ -127,6 +131,7 @@
     <a href="#matrix">
       <figure>
         <svg
+          focusable="false"
           xmlns="http://www.w3.org/2000/svg"
           viewbox="0 0 507 285"
           width="507"
@@ -149,6 +154,7 @@
     <a href="#construction">
       <figure>
         <svg
+          focusable="false"
           xmlns="http://www.w3.org/2000/svg"
           viewbox="0 0 507 285"
           width="507"
