Add hashbang support for better SEO

--- a/src/components/about/index.ejs
+++ b/src/components/about/index.ejs
@@ -1,5 +1,5 @@
 <!-- prettier-ignore -->
-<section id="about" role="dialog" tabindex="0">
+<section id="!about" class="about" role="dialog" tabindex="0">
   <div class="text-container">
     <%- md(`
 # <span>About Me</span>
