--- a/src/components/construction/index.ejs
+++ b/src/components/construction/index.ejs
@@ -1,5 +1,5 @@
 <!-- prettier-ignore -->
-<section id="construction" class="article" role="dialog" tabindex="0">
+<section id="!construction" class="construction article" role="dialog" tabindex="0">
   <div class="text-container">
     <%- md(`
 # <span>WIP</span>
