--- a/src/components/gems/index.ejs
+++ b/src/components/gems/index.ejs
@@ -1,5 +1,5 @@
 <!-- prettier-ignore -->
-<section id="gems" class="article" role="dialog" tabindex="0">
+<section id="!gems" class="gems article" role="dialog" tabindex="0">
   <div class="text-container">
     <%- md(`
 # <span>Space Gems</span>
