--- a/src/components/mainmenu/index.ejs
+++ b/src/components/mainmenu/index.ejs
@@ -23,10 +23,13 @@
     <div class="leaf"></div>
   </div> -->
   <nav class="nav">
-    <a class="button" href="#about" title="Go to About section">ABOUT</a
-    ><a class="button" href="#work" title="Go to Work section">WORK</a>
+    <a class="button" href="#!about" title="Go to About section">ABOUT</a
+    ><a class="button" href="#!work" title="Go to Work section">WORK</a>
     <br />
-    <a class="thanks" href="#thanks" title="Go to Thanks & Attribution section"
+    <a
+      class="thanks-link"
+      href="#!thanks"
+      title="Go to Thanks & Attribution section"
       >Thanks & Attribution</a
     >
   </nav>
