--- a/src/components/mainmenu/index.scss
+++ b/src/components/mainmenu/index.scss
@@ -138,7 +138,7 @@ section.mainmenu {
       }
     }
 
-    .thanks {
+    .thanks-link {
       font-size: 0.67em;
       display: inline-block;
       margin-top: 10vh;
