--- a/src/components/matrix/index.ejs
+++ b/src/components/matrix/index.ejs
@@ -1,5 +1,5 @@
 <!-- prettier-ignore -->
-<section id="matrix" class="article" role="dialog" tabindex="0">
+<section id="!matrix" class="matrix article" role="dialog" tabindex="0">
   <div class="text-container">
     <%- md(`
 # <span>Pure CSS</span><br aria-hidden="true" /><span>Digital Rain</span>
