--- a/src/components/shit/index.ejs
+++ b/src/components/shit/index.ejs
@@ -1,5 +1,5 @@
 <!-- prettier-ignore -->
-<section id="shit" class="article" role="dialog" tabindex="0">
+<section id="!shit" class="shit article" role="dialog" tabindex="0">
   <div class="text-container">
     <%- md(`
 # <span>Shit</span><br aria-hidden="true" /><span>Compressor</span>
