--- a/src/components/thanks/index.ejs
+++ b/src/components/thanks/index.ejs
@@ -1,5 +1,5 @@
 <!-- prettier-ignore -->
-<section id="thanks" role="dialog" tabindex="0">
+<section id="!thanks" class="thanks" role="dialog" tabindex="0">
   <div class="text-container">
     <%- md(`
 # <span>Thank You</span><span class="star"></span>
