--- a/src/components/thanks/index.scss
+++ b/src/components/thanks/index.scss
@@ -1,6 +1,6 @@
 @import "sass-inline-svg.scss";
 
-#thanks {
+.thanks {
   background: inline-svg("radial") 50% 50%/100% auto;
 
   .text-container {
