--- a/src/components/transition/about.scss
+++ b/src/components/transition/about.scss
@@ -91,7 +91,7 @@
   }
 }
 
-#about:target {
+.about:target {
   ~ .mainmenu .about-filter {
     transition: 0.29s transform 0.05s;
     transform: scale3d(1, 1, 1);
