--- a/src/components/work/index.ejs
+++ b/src/components/work/index.ejs
@@ -27,7 +27,7 @@
 />
 `) %>
 
-<section id="work" role="dialog" tabindex="0">
+<section id="!work" class="work" role="dialog" tabindex="0">
   <div class="text-container">
     <h1>
       <span>Work</span>
@@ -36,7 +36,7 @@
     <br />
     <p>Some of my <span class="no-break">personal projects:</span></p>
     <br />
-    <a href="#website">
+    <a href="#!website">
       <figure>
         <svg
           focusable="false"
@@ -59,7 +59,7 @@
         </figcaption>
       </figure>
     </a>
-    <a href="#shit">
+    <a href="#!shit">
       <figure>
         <svg
           focusable="false"
@@ -82,7 +82,7 @@
         </figcaption>
       </figure>
     </a>
-    <a href="#gems">
+    <a href="#!gems">
       <figure>
         <svg
           focusable="false"
@@ -128,7 +128,7 @@
         </figcaption>
       </figure>
     </a>
-    <a href="#matrix">
+    <a href="#!matrix">
       <figure>
         <svg
           focusable="false"
@@ -151,7 +151,7 @@
         </figcaption>
       </figure>
     </a>
-    <a href="#construction">
+    <a href="#!construction">
       <figure>
         <svg
           focusable="false"
