Add accesskey support

--- a/src/components/about/index.ejs
+++ b/src/components/about/index.ejs
@@ -1,5 +1,6 @@
 <!-- prettier-ignore -->
-<section id="!about" class="about" role="dialog" tabindex="0">
+<section id="!about" class="about" tabindex="-1">
+  <div class="scroll-container" tabindex="0">
   <div class="text-container">
     <%- md(`
 # <span>About Me</span>
@@ -51,5 +52,6 @@ Attitude & Mindset, <br />not so much.
 [hojialiang@yahoo.com](mailto:hojialiang@yahoo.com "My Email")
 
     `) %>
+  </div>
   </div>
 </section>
