--- a/src/components/construction/index.ejs
+++ b/src/components/construction/index.ejs
@@ -1,5 +1,6 @@
 <!-- prettier-ignore -->
-<section id="!construction" class="construction article" role="dialog" tabindex="0">
+<section id="!construction" class="construction article" tabindex="-1">
+  <div class="scroll-container" tabindex="0">
   <div class="text-container">
     <%- md(`
 # <span>WIP</span>
@@ -10,5 +11,6 @@ Project Demo Links:
 
 - [Pieretta in WebGL](https://jialiang.github.io/pieretta/)
     `) %>
+  </div>
   </div>
 </section>
