--- a/src/components/gems/index.ejs
+++ b/src/components/gems/index.ejs
@@ -1,5 +1,6 @@
 <!-- prettier-ignore -->
-<section id="!gems" class="gems article" role="dialog" tabindex="0">
+<section id="!gems" class="gems article" tabindex="-1">
+  <div class="scroll-container" tabindex="0">
   <div class="text-container">
     <%- md(`
 # <span>Space Gems</span>
@@ -55,5 +56,6 @@ I also got a 98/100 for Performance according to [Lighthouse](https://lighthouse
 
 <small>*Information presented here is true at the time of writing*</small>
     `) %>
+  </div>
   </div>
 </section>
