--- a/src/components/matrix/index.ejs
+++ b/src/components/matrix/index.ejs
@@ -1,5 +1,6 @@
 <!-- prettier-ignore -->
-<section id="!matrix" class="matrix article" role="dialog" tabindex="0">
+<section id="!matrix" class="matrix article" tabindex="-1">
+  <div class="scroll-container" tabindex="0">
   <div class="text-container">
     <%- md(`
 # <span>Pure CSS</span><br aria-hidden="true" /><span>Digital Rain</span>
@@ -51,5 +52,6 @@ Anyway, I'm thinking of giving this another go in the future.
 
 <small>*Information presented here is true at the time of writing*</small>
     `) %>
+  </div>
   </div>
 </section>
