--- a/src/components/shit/index.ejs
+++ b/src/components/shit/index.ejs
@@ -1,5 +1,6 @@
 <!-- prettier-ignore -->
-<section id="!shit" class="shit article" role="dialog" tabindex="0">
+<section id="!shit" class="shit article" tabindex="-1">
+  <div class="scroll-container" tabindex="0">
   <div class="text-container">
     <%- md(`
 # <span>Shit</span><br aria-hidden="true" /><span>Compressor</span>
@@ -42,5 +43,6 @@ Problem 3 and 4 is merely a UI problem and can be solved by exposing the relevan
 
 <small>*Information presented here is true at the time of writing*</small>
     `) %>
+  </div>
   </div>
 </section>
