--- a/src/components/thanks/index.ejs
+++ b/src/components/thanks/index.ejs
@@ -1,5 +1,6 @@
 <!-- prettier-ignore -->
-<section id="!thanks" class="thanks" role="dialog" tabindex="0">
+<section id="!thanks" class="thanks" tabindex="-1">
+  <div class="scroll-container" tabindex="0">
   <div class="text-container">
     <%- md(`
 # <span>Thank You</span><span class="star"></span>
@@ -11,5 +12,6 @@
 - Thanks to [Github](https://pages.github.com/) for hosting this website.
     `) %>
     <br />
+  </div>
   </div>
 </section>
