Make text-containers main landmark

--- a/src/components/matrix/index.ejs
+++ b/src/components/matrix/index.ejs
@@ -1,7 +1,7 @@
 <!-- prettier-ignore -->
 <section id="!matrix" class="matrix article" tabindex="-1">
   <div class="scroll-container" tabindex="0">
-  <div class="text-container">
+  <main class="text-container">
     <%- md(`
 # <span>Pure CSS</span><br aria-hidden="true" /><span>Digital Rain</span>
 
@@ -52,6 +52,6 @@ Anyway, I'm thinking of giving this another go in the future.
 
 <small>*Information presented here is true at the time of writing*</small>
     `) %>
-  </div>
+  </main>
   </div>
 </section>
