--- a/src/components/thanks/index.ejs
+++ b/src/components/thanks/index.ejs
@@ -1,7 +1,7 @@
 <!-- prettier-ignore -->
 <section id="!thanks" class="thanks" tabindex="-1">
   <div class="scroll-container" tabindex="0">
-  <div class="text-container">
+  <main class="text-container">
     <%- md(`
 # <span>Thank You</span><span class="star"></span>
 
@@ -12,6 +12,6 @@
 - Thanks to [Github](https://pages.github.com/) for hosting this website.
     `) %>
     <br />
-  </div>
+  </main>
   </div>
 </section>
