--- a/src/components/website/index.ejs
+++ b/src/components/website/index.ejs
@@ -1,7 +1,7 @@
 <!-- prettier-ignore -->
 <section id="!website" class="website article" tabindex="-1">
   <div class="scroll-container" tabindex="0">
-  <div class="text-container">
+  <main class="text-container">
     <%- md(`
 # <span>My Personal</span><br aria-hidden="true" /><span>Website</span>
 
@@ -96,6 +96,6 @@ Zip, zilch, nada. No trackers, no analytics.
 
 <small>*Information presented here is true at the time of writing*</small>
     `) %>
-  </div>
+  </main>
   </div>
 </section>
