--- a/src/components/work/index.ejs
+++ b/src/components/work/index.ejs
@@ -29,7 +29,7 @@
 
 <section id="!work" class="work" tabindex="-1">
   <div class="scroll-container" tabindex="0">
-    <div class="text-container">
+    <main class="text-container">
       <h1>
         <span>Work</span>
       </h1>
@@ -180,6 +180,6 @@
       <p class="white no-break">Stay tuned.</p>
       <br />
       <p><span class="no-break">More stuff might</span> be added soon.</p>
-    </div>
+    </main>
   </div>
 </section>
