--- a/src/components/about/index.ejs
+++ b/src/components/about/index.ejs
@@ -1,7 +1,7 @@
 <!-- prettier-ignore -->
 <section id="!about" class="about" tabindex="-1">
   <div class="scroll-container" tabindex="0">
-  <div class="text-container">
+  <main class="text-container">
     <%- md(`
 # <span>About Me</span>
 
@@ -52,6 +52,6 @@ Attitude & Mindset, <br />not so much.
 [hojialiang@yahoo.com](mailto:hojialiang@yahoo.com "My Email")
 
     `) %>
-  </div>
+  </main>
   </div>
 </section>
