--- a/src/components/construction/index.ejs
+++ b/src/components/construction/index.ejs
@@ -1,7 +1,7 @@
 <!-- prettier-ignore -->
 <section id="!construction" class="construction article" tabindex="-1">
   <div class="scroll-container" tabindex="0">
-  <div class="text-container">
+  <main class="text-container">
     <%- md(`
 # <span>WIP</span>
 
@@ -11,6 +11,6 @@ Project Demo Links:
 
 - [Pieretta in WebGL](https://jialiang.github.io/pieretta/)
     `) %>
-  </div>
+  </main>
   </div>
 </section>
