--- a/src/components/gems/index.ejs
+++ b/src/components/gems/index.ejs
@@ -1,7 +1,7 @@
 <!-- prettier-ignore -->
 <section id="!gems" class="gems article" tabindex="-1">
   <div class="scroll-container" tabindex="0">
-  <div class="text-container">
+  <main class="text-container">
     <%- md(`
 # <span>Space Gems</span>
 
@@ -56,6 +56,6 @@ I also got a 98/100 for Performance according to [Lighthouse](https://lighthouse
 
 <small>*Information presented here is true at the time of writing*</small>
     `) %>
-  </div>
+  </main>
   </div>
 </section>
