--- a/src/components/shit/index.ejs
+++ b/src/components/shit/index.ejs
@@ -1,7 +1,7 @@
 <!-- prettier-ignore -->
 <section id="!shit" class="shit article" tabindex="-1">
   <div class="scroll-container" tabindex="0">
-  <div class="text-container">
+  <main class="text-container">
     <%- md(`
 # <span>Shit</span><br aria-hidden="true" /><span>Compressor</span>
 
@@ -43,6 +43,6 @@ Problem 3 and 4 is merely a UI problem and can be solved by exposing the relevan
 
 <small>*Information presented here is true at the time of writing*</small>
     `) %>
-  </div>
+  </main>
   </div>
 </section>
