--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -27,7 +27,7 @@ body {
   > div,
   > svg {
     z-index: 1;
-    top: 0;
+    top: 5%;
     width: 100%;
     outline: none;
   }
@@ -36,7 +36,7 @@ body {
     position: absolute;
     z-index: 2;
     box-sizing: border-box;
-    height: 100%;
+    height: 90%;
     transform: translateZ(0);
 
     content-visibility: auto;
@@ -52,13 +52,15 @@ body {
     overflow: hidden;
     width: calc(100vh * 3 / 2);
     max-width: 100%;
-    height: 100%;
+    height: 90%;
     margin: auto;
   }
 
   .cover {
     z-index: 2;
+    top: 0;
     width: calc(102vh * 3 / 2);
+    height: 100%;
     pointer-events: none;
   }
 
@@ -140,6 +142,7 @@ a {
 
 .text-container {
   font-size: 1.35em;
+  display: block;
   box-sizing: border-box;
   width: 100%;
   max-width: 25.5em;
