Add IE10 support

--- a/src/components/transition/index.ejs
+++ b/src/components/transition/index.ejs
@@ -8,4 +8,4 @@
   <div class="fish-1"></div>
   <div class="fish-2"></div>
 </div>
-<div class="darken" role="presentation"></div>
+<svg focusable="false" class="darken" role="presentation"></svg>
