--- a/src/components/website/index.ejs
+++ b/src/components/website/index.ejs
@@ -62,12 +62,11 @@ This website is compatible with:
 - Edge
 - Safari
 - Internet Explorer 11
+- Internet Explorer 10
 
-It also functions fine with JavaScript disabled. This website only contains JavaScript code to make it function better for keyboard-only users. For example,
+It also functions fine with JavaScript disabled, even on Internet Explorer 10 and 11 as no JavaScript polyfills is used.
 
-- Ensuring focused links are in view and not blocked by fixed position elements.
-- Ensuring the parent container is focused when navigating into a new section.
-- Remembering the last focused link of a page so that users can continue where they left off when going back.
+This website only contains JavaScript code to make it function better for keyboard-only users by ensuring focused links are in view and not blocked by fixed position elements.
 
 This website supports screens of:
 
