Update about section copy

--- a/src/components/about/index.ejs
+++ b/src/components/about/index.ejs
@@ -19,9 +19,9 @@
 Hi, I'm Jia Liang
 [hojialiang@yahoo.com](mailto:hojialiang@yahoo.com "My Email")
 
+Here's my [Github profile page](https://github.com/jialiang "Github Profile Page")
+
 I'm an <span class="no-break">Information Systems</span> Graduate.
-Made my 1st website <span class="no-break">6 years ago.</span>
-Lived in Singapore <span class="no-break">for 2 years.</span>
 
 <br />
 <br />
@@ -34,23 +34,7 @@ HTML, CSS, JavaScript.
 NodeJS, Typescript, Jest.
 Sequelize, Knex, Postgres.
 
-Check out [my resume](https://google.com "My Resume") <br />for the full list.
-
-<br />
-<br />
-<br />
-
-<p class="white">But I don't think that's<br />what's important.</p>
-
-Algorithms & Frameworks <br />are easily learned.
-Attitude & Mindset, <br />not so much.
-
-<p class="white">So let's talk instead.</p>
-
-<br />
-
-[hojialiang@yahoo.com](mailto:hojialiang@yahoo.com "My Email")
-
+Check out [my resume](resume.pdf "My Resume") <br />for the full list.
     `) %>
   </main>
   </div>
