--- a/src/components/transition/about.scss
+++ b/src/components/transition/about.scss
@@ -63,8 +63,8 @@
   .flower-1,
   .flower-2 {
     position: absolute;
-    bottom: 0;
-    left: 0;
+    bottom: -25px;
+    left: -25px;
     width: 350px;
     height: 350px;
     transform: rotate3d(0, 0, 1, 24deg) scale3d(0, 0, 1);
